--- a/MyApplications/MyApplications/MyApplications.csproj
+++ b/MyApplications/MyApplications/MyApplications.csproj
@@ -33,6 +33,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataWindow">
+      <HintPath>C:\Program Files (x86)\Sybase\DataWindow .NET 2.5\DataWindow.dll</HintPath>
+    </Reference>
+    <Reference Include="DataWindowInterop">
+      <HintPath>C:\Program Files (x86)\Sybase\DataWindow .NET 2.5\DataWindowInterop.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="MyControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Test\MyControls.dll</HintPath>
@@ -48,6 +57,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebDataWindow">
+      <HintPath>C:\Program Files (x86)\Sybase\DataWindow .NET 2.5\WebDataWindow.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -79,6 +91,7 @@
     <EmbeddedResource Include="Setting.resx">
       <DependentUpon>Setting.cs</DependentUpon>
     </EmbeddedResource>
+    <Fakes Include="Fakes\DataWindow.fakes" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
