--- a/MyApplications/MyApplications/MyApplications.csproj
+++ b/MyApplications/MyApplications/MyApplications.csproj
@@ -33,11 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DataWindow">
-      <HintPath>C:\Program Files (x86)\Sybase\DataWindow .NET 2.5\DataWindow.dll</HintPath>
-    </Reference>
-    <Reference Include="DataWindowInterop">
-      <HintPath>C:\Program Files (x86)\Sybase\DataWindow .NET 2.5\DataWindowInterop.dll</HintPath>
+    <Reference Include="ApplicationProgramFunction, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Test\ApplicationProgramFunction.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -57,9 +55,6 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebDataWindow">
-      <HintPath>C:\Program Files (x86)\Sybase\DataWindow .NET 2.5\WebDataWindow.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
