--- a/MyApplications/MyApplications/MyApplications.csproj
+++ b/MyApplications/MyApplications/MyApplications.csproj
@@ -71,6 +71,15 @@
     <Compile Include="Setting.Designer.cs">
       <DependentUpon>Setting.cs</DependentUpon>
     </Compile>
+    <Compile Include="ColorToArgb.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ColorToArgb.Designer.cs">
+      <DependentUpon>ColorToArgb.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="ColorToArgb.resx">
+      <DependentUpon>ColorToArgb.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
