--- a/MyApplications/MyApplications/MyApplications.csproj
+++ b/MyApplications/MyApplications/MyApplications.csproj
@@ -58,7 +58,7 @@
     </Reference>
     <Reference Include="MyControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Test\MyControls.dll</HintPath>
+      <HintPath>..\Debug\MyControls.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -99,12 +99,6 @@
     <Compile Include="EditPictureForCell.Designer.cs">
       <DependentUpon>EditPictureForCell.cs</DependentUpon>
     </Compile>
-    <Compile Include="PictureEdit.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PictureEdit.Designer.cs">
-      <DependentUpon>PictureEdit.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setting.cs">
@@ -119,6 +113,12 @@
     <Compile Include="ColorToArgb.Designer.cs">
       <DependentUpon>ColorToArgb.cs</DependentUpon>
     </Compile>
+    <Compile Include="PictureEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PictureEdit.Designer.cs">
+      <DependentUpon>PictureEdit.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ChangeSystemWallPapper.resx">
       <DependentUpon>ChangeSystemWallPapper.cs</DependentUpon>
     </EmbeddedResource>
@@ -130,9 +130,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditPictureForCell.resx">
       <DependentUpon>EditPictureForCell.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PictureEdit.resx">
-      <DependentUpon>PictureEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -146,6 +143,9 @@
     </Compile>
     <EmbeddedResource Include="Setting.resx">
       <DependentUpon>Setting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PictureEdit.resx">
+      <DependentUpon>PictureEdit.cs</DependentUpon>
     </EmbeddedResource>
     <Fakes Include="Fakes\DataWindow.fakes" />
     <None Include="packages.config" />
