--- a/MyApplications/MyApplications/MyApplications.csproj
+++ b/MyApplications/MyApplications/MyApplications.csproj
@@ -99,6 +99,12 @@
     <Compile Include="EditPictureForCell.Designer.cs">
       <DependentUpon>EditPictureForCell.cs</DependentUpon>
     </Compile>
+    <Compile Include="PicutreZoomParameter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PicutreZoomParameter.Designer.cs">
+      <DependentUpon>PicutreZoomParameter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setting.cs">
@@ -130,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditPictureForCell.resx">
       <DependentUpon>EditPictureForCell.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PicutreZoomParameter.resx">
+      <DependentUpon>PicutreZoomParameter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
